--- a/Website/wwwroot/app/core/menu/menu.component.html
+++ b/Website/wwwroot/app/core/menu/menu.component.html
@@ -4,9 +4,9 @@
         <!-- Logo -->
         <a class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>A</b>LT</span>
+            <span class="logo-mini"><b></b></span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>Admin</b>LTE</span>
+            <span class="logo-lg"><b>RMS</b></span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top">
@@ -71,93 +71,62 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <!--to co mam potem wywalic  ------>
             <ul class="sidebar-menu" data-widget="tree">
-                <li class="header">MAIN NAVIGATION</li>
-                <li class="treeview" onclick="changeDisplay(this)">
-                    <a href="#">
-                        <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-files-o"></i>
-                        <span>Layout Options</span>
-                        <span class="pull-right-container">
-                            <span class="label label-primary pull-right">4</span>
-                        </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                        <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                        <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                        <li><a href="pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="pages/widgets.html">
-                        <i class="fa fa-th"></i> <span>Widgets</span>
-                        <span class="pull-right-container">
-                            <small class="label pull-right bg-green">new</small>
-                        </span>
-                    </a>
-                </li>
+                <li class="header"></li>
 
                 <li class="treeview" onclick="changeDisplay(this)">
                     <a href="#">
-                        <i class="fa fa-pie-chart"></i>
-                        <span>IIS Agent</span>
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
-                    </a>
-
-                    <ul class="treeview-menu">
-                        <li *ngFor='let statistic of statistics'><a [routerLink]="['/chart', statistic.name]"><i class="fa fa-circle-o"></i>{{statistic.name}}</a></li>
-                    </ul>
-
-                </li>
-             
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-share"></i> <span>Multilevel</span>
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
+                        <i class="fa fa-th"></i>
+                        <span>Partitions</span>
+                      
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-down pull-right"></i>
+                            </span>
+                      
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                        <li class="treeview">
-                            <a href="#">
-                                <i class="fa fa-circle-o"></i> Level One
-                                <span class="pull-right-container">
-                                    <i class="fa fa-angle-left pull-right"></i>
-                                </span>
-                            </a>
-                            <ul class="treeview-menu">
-                                <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-                                <li class="treeview">
-                                    <a href="#">
-                                        <i class="fa fa-circle-o"></i> Level Two
-                                        <span class="pull-right-container">
-                                            <i class="fa fa-angle-left pull-right"></i>
-                                        </span>
-                                    </a>
-                                    <ul class="treeview-menu">
-                                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
+                        <li><a><i class="fa fa-circle-o"></i>Default</a>
+                        
+                            <ul class="treeview-menu treeview-menu-children" >
+                                <li>
+                                    <a><i class="fa fa-circle-o"></i>IIS Agent</a>
+                                    <ul class="treeview-menu treeview-menu-children">
+                                        <li>
+
+                                            <ul class="treeview-menu treeview-menu-children">
+
+
+                                                <li *ngFor='let statistic of statistics'><a [routerLink]="['/chart', statistic.name]"><i class="fa fa-pie-chart"></i>{{statistic.name}}</a></li>
+
+                                            </ul>
+
+
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
+                        
                         </li>
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
                     </ul>
                 </li>
-                <li><a href="https://adminlte.io/docs"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+
+                <li><a><i class="fa fa-book"></i> <span>Events</span></a></li>
+                <li><a><i class="fa fa-file"></i> <span>Reports</span></a></li>
+                <li class="treeview" onclick="changeDisplay(this)">
+                    <a href="#">
+                        <i class="fa fa-files-o"></i>
+                        <span>Configuration</span>
+                     
+                          
+                                <span class="pull-right-container">
+                                    <i class="fa fa-angle-down pull-right"></i>
+                                </span>
+                     
+                    </a>
+                    <ul class="treeview-menu">
+                        <li><a><i class="fa fa-circle-o"></i>Admin</a></li>
+                        <li><a><i class="fa fa-circle-o"></i>Triggers</a></li>
+                    </ul>
+                </li>                            
             </ul>
         </section>
     </aside>
