removed needless things

--- a/Website/wwwroot/app/core/main-content/chart/chart.component.html
+++ b/Website/wwwroot/app/core/main-content/chart/chart.component.html
@@ -4,7 +4,7 @@
         <div class="box box-primary">
             <div class="box-header with-border">
                 <i class="fa fa-bar-chart-o"></i>
-                <h3 class="box-title">{{name}}</h3>
+                <h3 class="box-title">{{appName}}</h3>
             </div>
             <div class="box-body"  >
                 <div class="row">
