--- a/Website/wwwroot/app/app.component.html
+++ b/Website/wwwroot/app/app.component.html
@@ -1,6 +1,6 @@
 ﻿
     <app-menu></app-menu>
-    <app-main-content></app-main-content>
+    <!--<app-main-content></app-main-content>-->
     <router-outlet></router-outlet>
 
  <app-footer></app-footer>
