--- a/Website/wwwroot/app/core/main-content/main-content.component.html
+++ b/Website/wwwroot/app/core/main-content/main-content.component.html
@@ -1,22 +1,12 @@
 ﻿<div class="content-wrapper">
-
     <section class="content-header">
-        <h1>
-            Dashboard
-            <small>Control panel</small>
-        </h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Dashboard</li>
         </ol>
     </section>
-    <!-- Main content -->
     <section class="content">
-
         <div class="row">
-            <app-chart></app-chart>
+            <app-chart *ngIf="shouldBeVisible"></app-chart>
         </div>
-
     </section>
 
 </div>
