--- a/Website/wwwroot/app/core/menu/menu.component.html
+++ b/Website/wwwroot/app/core/menu/menu.component.html
@@ -56,22 +56,12 @@
                 <div class="pull-left info">
                 </div>
             </div>
-            <!-- search form -->
-            <form action="#" method="get" class="sidebar-form">
-                <div class="input-group">
-                    <input type="text" name="q" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </span>
-                </div>
-            </form>
+          
             <!-- /.search form -->
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <!--to co mam potem wywalic  ------>
             <ul class="sidebar-menu" data-widget="tree">
-                <li class="header"></li>
+              
 
                 <li class="treeview" onclick="changeDisplay(this)">
                     <a href="#">
@@ -94,8 +84,8 @@
 
                                             <ul class="treeview-menu treeview-menu-children">
 
-
-                                                <li *ngFor='let statistic of statistics'><a [routerLink]="['/chart', statistic.name]"><i class="fa fa-pie-chart"></i>{{statistic.name}}</a></li>
+                                             
+                                                <li *ngFor='let statistic of statistics'><a [routerLink]="['/chart', statistic.appName]"><i class="fa fa-pie-chart"></i>{{statistic.appName}}</a></li>
 
                                             </ul>
 
