renamed main-content.component & small fixes

--- a/Website/wwwroot/app/app.component.html
+++ b/Website/wwwroot/app/app.component.html
@@ -1,7 +1,6 @@
 ﻿
     <app-menu></app-menu>
-    <router-outlet></router-outlet>
-
+<app-default></app-default>
  <app-footer></app-footer>
 <app-control-sidebar></app-control-sidebar>
 
