Rename menu item from Partitions to Dashboards

--- a/Website/wwwroot/app/core/menu/menu.component.html
+++ b/Website/wwwroot/app/core/menu/menu.component.html
@@ -24,7 +24,7 @@
                 <li class="treeview" onclick="changeDisplay(this)">
                     <a href="#">
                         <i class="fa fa-th"></i>
-                        <span>Partitions</span>
+                        <span>Dashboards</span>
                       
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-down pull-right"></i>
