Move router-outlet component to the main app component

--- a/Website/wwwroot/app/app.component.html
+++ b/Website/wwwroot/app/app.component.html
@@ -1,7 +1,7 @@
 ﻿
-    <app-menu></app-menu>
-
- <app-footer></app-footer>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 <app-control-sidebar></app-control-sidebar>
 
 
