Add basic behavior to bread crumb component

--- a/Website/src/app/core/header/bread-crumb/bread-crumb.component.html
+++ b/Website/src/app/core/header/bread-crumb/bread-crumb.component.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
     <li class="active" *ngFor="let breadCrumbItem of breadCrumbs">
-        <i class="{{ breadCrumbItem.icon }}"></i> {{ breadCrumbItem.name }}
+        {{ breadCrumbItem.text }}
     </li>
 </ol>
