--- a/Website/src/app/content/main-dashboard/main-dashboard.component.html
+++ b/Website/src/app/content/main-dashboard/main-dashboard.component.html
@@ -1,2 +1,7 @@
 <header title="Monitor" smallTitle="Statistics Overview"></header>
 <bread-crumb></bread-crumb>
+<div class="row">
+    <div *ngFor="let tile of partitionTiles">
+        <partition-tile [model]="tile"></partition-tile>
+    </div>
+</div>
