Add total faults chart to main dashboard

--- a/Website/src/app/content/main-dashboard/main-dashboard.component.html
+++ b/Website/src/app/content/main-dashboard/main-dashboard.component.html
@@ -5,3 +5,6 @@
         <partition-tile [model]="tile"></partition-tile>
     </div>
 </div>
+<div class="row">
+    <faults-chart></faults-chart>
+</div>
