Add CPU utilization per partition chart to main dashboard

--- a/Website/src/app/content/main-dashboard/main-dashboard.component.html
+++ b/Website/src/app/content/main-dashboard/main-dashboard.component.html
@@ -9,3 +9,6 @@
     <faults-chart></faults-chart>
     <alerts-chart></alerts-chart>
 </div>
+<div class="row">
+    <partitions-cpu-chart></partitions-cpu-chart>
+</div>
