Add memory utilization per partition chart to main dashboard

--- a/Website/src/app/content/main-dashboard/main-dashboard.component.html
+++ b/Website/src/app/content/main-dashboard/main-dashboard.component.html
@@ -12,3 +12,6 @@
 <div class="row">
     <partitions-cpu-chart></partitions-cpu-chart>
 </div>
+<div class="row">
+    <partitions-memory-chart></partitions-memory-chart>
+</div>
