Main dashboard charts display improvements

--- a/Website/src/app/content/main-dashboard/charts/faults-chart.component.html
+++ b/Website/src/app/content/main-dashboard/charts/faults-chart.component.html
@@ -1,5 +1,5 @@
 <div class="col-lg-8">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
                 <i class="fa fa-bar-chart-o"> Faults detected in last 7 days</i>
