--- a/Website/src/app/content/main-dashboard/charts/alerts-chart.component.html
+++ b/Website/src/app/content/main-dashboard/charts/alerts-chart.component.html
@@ -1,5 +1,5 @@
 <div class="col-lg-4">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
                 <i class="fa fa-bar-chart-o"> Alerts reported in last 7 days</i>
