--- a/Website/src/app/content/main-dashboard/charts/partitionsCpuUtilization-chart.component.html
+++ b/Website/src/app/content/main-dashboard/charts/partitionsCpuUtilization-chart.component.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
                 <i class="fa fa-bar-chart-o"> CPU Utilization by Partition</i>
@@ -7,6 +7,9 @@
         </div>
         <div class="panel-body">
             <div id="partitionsCpuUtilizationChart"></div>
+            <div id="legend" *ngFor="let label of legendLabels">
+                <span [style.color]="label.color">{{ label.name }}</span>
+            </div>
         </div>
     </div>
 </div>
