Add empty agents config page

--- a/Website/src/app/core/header/bread-crumb/bread-crumb.component.html
+++ b/Website/src/app/core/header/bread-crumb/bread-crumb.component.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li class="active" *ngFor="let breadCrumbItem of breadCrumbs">
-        {{ breadCrumbItem.text }}
+    <li class="active" *ngFor="let item of items">
+        {{ item.text }}
     </li>
 </ol>
