--- a/Website/src/app/content/main-dashboard/main-dashboard.component.html
+++ b/Website/src/app/content/main-dashboard/main-dashboard.component.html
@@ -1,5 +1,5 @@
 <header title="Monitor" smallTitle="Statistics Overview"></header>
-<bread-crumb></bread-crumb>
+<bread-crumb [items]="breadCrumbs"></bread-crumb>
 <div class="row">
     <div *ngFor="let tile of partitionTiles">
         <partition-tile [model]="tile"></partition-tile>
